style.css
/* STYLESHEET STARTS HERE */

html, body {
  height: 100%;
}

body {
  margin: 0;
  min-width: 320px;

}

* {
  box-sizing: border-box;
  color: #595959;
}

/* HEADER */
/* ========================================================================= */
header {
  background: #fff;
  position: fixed;
  width: 100%;
  height: 65px;
  z-index: 999;
  top: 0;
  border-bottom: 1px dotted grey;
}

.header-outer-inner {
  display: table;
  width: 100%;

}

.header-inner {
  display: table-row;
  min-width: 100%;
  /*background: yellow;*/
}

.header-logo,
.header-info,
nav {
  display: table-cell;
  /*background: purple;*/
  vertical-align: middle;
  color: #595959;
}

.header-logo {
  width: 5%;
}

.header-info {
  width: 50%;
}

  .header-info-name {
    /*width: 25%;*/
    height: 50%;
    padding-left: 10px;
  }

  .header-info-number {
    /*width: 25%;*/
    height: 50%;
    padding-left: 10px;
    display: none;
  }


@media (min-width: 768px) {
  .header-info-number {
    display: block;
  }
}
/* NAVIGATION */
/* ========================================================================= */
/* nav.css

/* FOOTER */
/* ========================================================================= */
.footer {
  min-height: 60px;
  background: green;
}

/* Content Alignment Containers */
/* ========================================================================= */
.page-container {
  width: 100%;
  /*background-color: yellow;*/
  min-height: 100%;
}

.header-content-container {
  max-width: 80%;
  margin: auto;
  padding: 10px 0 10px 0;
  /*position: relative;*/
  /*background: orange;*/
  /*z-index: 2000;*/
}

.content-container {
  /*background: pink;*/
  max-width: 80%;
  margin: auto;
  height: 100%;
}


.body-content-container {
  background: green;
  min-height: 100vh;
}


/* section height setups*/
#fp-section1 {
  height: 80vh;
  width: 100%;
  /*background-color: red;*/
  background: url('assets/mw_hp_background.jpg');

  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: right top;

}

.fp-section1-opacity {
  background-color: rgba(128, 128, 128, 0.15);
  height: 100%;
}

.fp-section-1-text {
  padding-top: 100px;
}


#fp-section2 {
  min-height: 40vh;
  width: 100%;
  /*background-color: blue;*/
}

#fp-section3 {
  height: 80vh;
  width: 100%;
  /*background-color: pink;*/
  border-top: solid 1px grey;
  text-align: center;
}



/* FP Section 2 Styles */
/* ========================================================================= */
.a {
  /*background: yellow;*/
  font-size: 3em;
}

.b {
  /*background: pink;*/
}

.c {
  /*background: orange;*/
  font-size: 2em;
  padding: 10px 0 10px 0;


}

.d {
  /*background: teal;*/
  padding: 10px 0 10px 0;

}
.fp-s2-table {
  display: table;
  width: 100%;
  text-align: center;
  /*background: green;*/
  min-height: 40vh;
  margin: 20px 0 20px 0;
}

.fp-s2-table-row {
  display: table-row;
  text-align: center;
  /*background: purple;*/
  min-height: 200px;
  width: 100%;
  display: block;
}

.fp-s2-table-cell {
  display: table-cell;
  text-align: center;
  min-width: 100%;
  display: inline-block;
  /*background: grey;*/
  /*padding: 10px 0 10px 0;*/
}



.hp-icon {
  height: 150px;
}




/* FP section 3 styles */
/* ========================================================================= */

.fp-section-3-header {
  font-size: 3em;
  /*text-align: center;*/
}

.fp-section-3-blurb {
  /*text-align: center;*/
}

.fp-section-3-img {
  width: 50%;
  border: 1px solid red;
}

.fp-section-3-text {
  width: 50%;
  border: 1px solid red;
  text-align: left;
  display: table;
}

  .fp-section-3-text-row {
    display: table-row;
    background: orange;
  }

  .fp-section-3-text-bullet,
  .fp-section-3-text-point {
    display: table-cell;
    border: 1px solid black;
    padding: 10px;

  }

  .fp-section-3-text-bullet {
    width: 10%;
    text-align: center;
  }
  .fp-section-3-text-point{
    width: 90%;
    text-align: left;
  }





.fp-section-3-test-slide {
  background: yellow;

}

/* UNIVERSAL PAGE STYLES */
/* ========================================================================= */
.page-banner-img {
  height: 40vh;
  background: url('assets/mw_hp_background.jpg');

  /*background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: right top;*/
}

.page-header-text {
  font-size: 4em;
  text-align: center;
  padding: 30px 0 10px 0;
}

.page-blurb {
  text-align: center;
  margin-bottom: 30px;
  font-size: 1.1em
}

/* SERVICES PAGE */
/* ========================================================================= */


/* FAQ PAGE */
/* ========================================================================= */


/* CONTACT PAGE */
/* ========================================================================= */

/* DEV STYLES */
/* ========================================================================= */

/*.header-logo {
  background: white;
}*/

